@@ -168,14 +168,16 @@ $(function() {
 });
 </script>
 
-
 <div class="bDataTable">
 
+% if ($model->showPaginationForm()) {
  <& /ajax/tablePager.mas,
    model => $model,
    page => $page,
    tpages => POSIX::ceil($matches / $pageSize) - 1,
 &>
+% }
+
 </div>
 
 <& SELF:legend, model => $model,
@@ -225,7 +227,7 @@ my $changeView = $model->action('changeView');
 %        }
 %     }
   <span id="creatingForm_<% $tableName %>"></span>
-% if ($nIds > 0) {
+% if ($nIds > 0 and $model->showFilterForm()) {
   <div class="tableSearch">
          <& SELF:filterForm,
             tableName => $tableName,
